--- a/project-meu-cantinho/frontend/src/app/features/espacos/espaco-detail/espaco-detail.component.html
+++ b/project-meu-cantinho/frontend/src/app/features/espacos/espaco-detail/espaco-detail.component.html
@@ -40,12 +40,12 @@
             </div>
           </div>
 
-          @if (espaco.filialNome) {
+          @if (espaco.filial) {
             <div class="info-card">
               <span class="icon">📍</span>
               <div class="info-text">
                 <span class="label">Filial</span>
-                <span class="value">{{ espaco.filialNome }}</span>
+                <span class="value">{{ espaco.filial.nome }}</span>
               </div>
             </div>
           }
