--- a/project-meu-cantinho/frontend/src/app/features/espacos/espacos-list/espacos-list.component.html
+++ b/project-meu-cantinho/frontend/src/app/features/espacos/espacos-list/espacos-list.component.html
@@ -38,7 +38,7 @@
               </div>
               <div class="info-item">
                 <span class="icon">📍</span>
-                <span class="value">{{ espaco.filialNome || 'Filial' }}</span>
+                <span class="value">{{ espaco.filial.nome || 'Filial' }}</span>
               </div>
             </div>
 
