--- a/project-meu-cantinho/frontend/src/app/shared/components/navbar/navbar.component.html
+++ b/project-meu-cantinho/frontend/src/app/shared/components/navbar/navbar.component.html
@@ -31,6 +31,10 @@
             <span class="nav-icon">📅</span>
             <span>Reservas</span>
           </a>
+          <a routerLink="/reservas/nova" routerLinkActive="active" class="nav-link">
+            <span class="nav-icon">➕</span>
+            <span>Nova Reserva</span>
+          </a>
         }
 
         <!-- Menu FUNCIONARIO -->
@@ -50,6 +54,10 @@
           <a routerLink="/funcionario/reservas" routerLinkActive="active" class="nav-link">
             <span class="nav-icon">📅</span>
             <span>Reservas</span>
+          </a>
+          <a routerLink="/reservas/nova" routerLinkActive="active" class="nav-link">
+            <span class="nav-icon">➕</span>
+            <span>Nova Reserva</span>
           </a>
         }
 
